# RAG-Powered-Document-Intelligence-Platform

./: .env.example  .gitignore  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  chat.py  documents.py  health.py
app/core/: config.py  exceptions.py  security.py
app/loaders/: __init__.py  base.py  csv_loader.py  docx_loader.py  excel_loader.py  pdf_loader.py  text_loader.py
app/models/: chat.py  document.py  responses.py
app/repositories/: __init__.py  document_repository.py
app/schemas/: chat.py  document.py
app/services/: chat_service.py  document_service.py  embedding_service.py  ingestion_service.py  retrieval_service.py  vector_store_service.py
app/utils/: file_utils.py  id_utils.py  text_utils.py
frontend/: Home.py  api_client.py
frontend/components/: chat_message.py  document_card.py  source_citation.py
frontend/pages/: 1_Upload_Documents.py  2_Ask_Questions.py  3_Manage_Documents.py  4_Settings.py
scripts/: create_sample_documents.py  reset_vector_database.py
tests/: conftest.py
tests/integration/: test_chat_api.py  test_document_api.py
tests/unit/: test_document_loaders.py  test_ingestion_service.py  test_text_utils.py
