[project]
name = "rag-document-intelligence"
version = "1.0.0"
description = "RAG-powered document intelligence platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "openai>=1.54.0",
  "chromadb>=0.5.0",
  "streamlit>=1.38.0",
  "PyPDF2>=3.0.0",
  "pypdf>=6.0.0",
  "python-docx>=1.1.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "beautifulsoup4>=4.0.0",
  "requests>=2.32.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "black>=24.10.0",
  "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
  "ignore:'asyncio.iscoroutinefunction' is deprecated",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
